alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -94,20 +94,18 @@ body {
     max-width: 1000px;
     display: flex;
     flex-direction: column;
-    
     justify-content: space-between;
     align-items: center;
     padding: 12px 12px;
     margin: 0;
 }
-}
+
 .scores-item {
     color: #437505;
     display: flex;
     flex-direction: column;
-    
-    justify-content: space-evenly;
-    align-items: flex-end;
+    justify-content: space-around;
+    align-items: center;
     padding: 12px;
     margin: 0;
 }
@@ -126,9 +124,11 @@ body {
     max-width: 1000px;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
-    padding: 10px;
+    padding: 12px 12px;
+    margin: 0;
+
 }
 .contact-item {
     color: #437505;
@@ -138,9 +138,10 @@ body {
     max-width: 1000px;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
-    padding: 10px 10px;
+    padding: 12px;
+    margin: 0;
 }
 
 .footer-container {
